sobre casos de teste de 2016 - e A, C e G de 2015

--- a/cadernos-de-problemas/2-Fase/2-Fase-2015/G_receita/in/1.in
+++ b/cadernos-de-problemas/2-Fase/2-Fase-2015/G_receita/in/1.in
@@ -97,7 +97,7 @@ Predicorten 262 2 667
 Depress 194 7 738
 Pondera 202 6 295
 Karvil 42 6 739
-Dôrico 29 3 640
+Derico 29 3 640
 Paroxetina 396 4 207
 Ketalar 338 5 697
 Keltrina 454 1 438
@@ -236,7 +236,7 @@ Predicorten 316 4 274
 Depress 4 6 916
 Pondera 384 8 488
 Karvil 173 7 472
-Dôrico 163 10 443
+Derico 163 10 443
 Paroxetina 361 9 558
 Ketalar 456 10 217
 Keltrina 10 6 824
